Make sure long sidebar help titles don’t get too close to the close button when in responsive mode

--- a/stylesheets/_component.tab-help.scss
+++ b/stylesheets/_component.tab-help.scss
@@ -32,7 +32,7 @@ $nav-color-dark:  darken(color(jadu-blue, dark), 5%) !default;
 
 .tab-help {
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
-    padding: 20px;
+    padding: 40px 20px 20px;
     opacity: .7;
     transition-delay: ease, 0s;
     transform-origin: 50% 0%;
